各エンドポイントに対して、swaggerの機能を設定 （エラー時のHTTPステータスコードは適当）
