# src/internal/presentation/handlers/performance.go
@@ -3,8 +3,10 @@ package handlers
 import (
 	"net/http"
 
+	"github.com/sohosai/ultradonguri-server/internal/domain/entities"
 	"github.com/sohosai/ultradonguri-server/internal/domain/repositories"
 	"github.com/sohosai/ultradonguri-server/internal/presentation/model/requests"
+	"github.com/sohosai/ultradonguri-server/internal/presentation/model/responses"
 
 	"github.com/gin-gonic/gin"
 )
@@ -14,10 +16,22 @@ type PerformanceHandler struct {
 	TelopStore   repositories.TelopStore
 }
 
+// PostPerformanceStart godoc
+// @Summary      start performance
+// @Description  endpoint for start performance
+// @Tags         performance
+// @Accept       json
+// @Produce      json
+// @Param performanceStart body requests.PerformanceRequest true "post performance request"
+// @Success      200  {object}  responses.SuccessResponse
+// @Failure      400  {object}  responses.ErrorResponse
+// @Router       /performance/start [post]
 func (h *PerformanceHandler) PostPerformanceStart(c *gin.Context) {
 	var perf requests.PerformanceRequest
 	if err := c.ShouldBindJSON(&perf); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		errRes, status := responses.NewErrorResponseAndHTTPStatus(entities.AppError{Message: err.Error(),
+			Kind: entities.InvalidFormat})
+		c.JSON(status, errRes)
 		return
 	}
 
@@ -31,13 +45,25 @@ func (h *PerformanceHandler) PostPerformanceStart(c *gin.Context) {
 	// }
 
 	h.AudioService.SetIsConversion(false)
-	c.JSON(http.StatusOK, gin.H{"ok": true})
+	c.JSON(http.StatusOK, responses.SuccessResponse{Message: "OK"})
 }
 
+// PostPerformanceMusic godoc
+// @Summary      start performance music
+// @Description  endpoint for start performance music
+// @Tags         performance
+// @Accept       json
+// @Produce      json
+// @Param performanceMusic body requests.MusicPostRequest true "post performance music"
+// @Success      200  {object}  responses.SuccessResponse
+// @Failure      400  {object}  responses.ErrorResponse
+// @Router       /performance/music [post]
 func (h *PerformanceHandler) PostPerformanceMusic(c *gin.Context) {
 	var perf requests.MusicPostRequest
 	if err := c.ShouldBindJSON(&perf); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		errRes, status := responses.NewErrorResponseAndHTTPStatus(entities.AppError{Message: err.Error(),
+			Kind: entities.InvalidFormat})
+		c.JSON(status, errRes)
 		return
 	}
 
@@ -56,7 +82,9 @@ func (h *PerformanceHandler) PostPerformanceMusic(c *gin.Context) {
 	err := h.AudioService.SetShouldBeMuted(musicEntity.Music.ShouldBeMuted)
 	if err != nil {
 		//後でエラーを細かくする
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		errRes, status := responses.NewErrorResponseAndHTTPStatus(entities.AppError{Message: err.Error(),
+			Kind: entities.InvalidFormat})
+		c.JSON(status, errRes)
 		return
 	}
 
@@ -66,5 +94,5 @@ func (h *PerformanceHandler) PostPerformanceMusic(c *gin.Context) {
 		h.AudioService.SetMute(false)
 	}
 
-	c.JSON(http.StatusOK, gin.H{"ok": true})
+	c.JSON(http.StatusOK, responses.SuccessResponse{Message: "OK"})
 }
